After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 84930 - count counts TRUE, which Excel97 doesn't
count counts TRUE, which Excel97 doesn't
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: import/export MS Excel (tm)
1.0.x
Other other
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2002-06-11 21:09 UTC by mattias waldau
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description mattias waldau 2002-06-11 21:09:23 UTC
count should not count logical values (counta should).

from the manual "    *  If you need to count logical values, text, or error
values, use the COUNTA function."

http://msdn.microsoft.com/library/default.asp?url=/library/en-us/office97/html/SEB6A.asp
Comment 1 Jody Goldberg 2002-06-11 21:45:00 UTC
Thanks for noticing the oversight.
This problem was in 1.0 and 1.1, the patch will be in 1.1.6 and 1.0.8.