http://bugzilla.gnome.org/show_bug.cgi?id=84930 only ints and floats not

2002-06-11  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=84930
	* fn-stat.c (callback_function_count) : only ints and floats not bools.